...
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".activities.invitations.InviteTeamMemberActivity">

    <EditText
        android:id="@+id/field_enter_member_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_team_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="25sp"
...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_enter_member_name" />

    <EditText
        android:id="@+id/field_enter_member_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_team_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
...
